--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "eslint-utils": "^1.4.1"
   }
 }
